// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`follow failer 1`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [
      "/v1/user/follow/add",
      Object {
        "restrict": "public",
        "userId": 1,
      },
    ],
    "context": null,
    "fn": [Function],
  },
  "type": "CALL",
}
`;

exports[`follow success 1`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [
      "/v1/user/follow/add",
      Object {
        "restrict": "public",
        "userId": 1,
      },
    ],
    "context": null,
    "fn": [Function],
  },
  "type": "CALL",
}
`;

exports[`unfollow failer 1`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [
      "/v1/user/follow/delete",
      Object {
        "restrict": "public",
        "userId": 1,
      },
    ],
    "context": null,
    "fn": [Function],
  },
  "type": "CALL",
}
`;

exports[`unfollow success 1`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [
      "/v1/user/follow/delete",
      Object {
        "restrict": "public",
        "userId": 1,
      },
    ],
    "context": null,
    "fn": [Function],
  },
  "type": "CALL",
}
`;
